--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,17 @@
+html {
+  font-family: 'Inter';
+}
+body {
+  max-width: 1000px;
+  margin: auto;
+  padding: 1rem;
+  text-align: center;
+}
 code {
+  font-family: 'JetBrains Mono';
   background: #d0d0d5;
 }
+
 
 .container {
   display: flex;
